# xlib-cpp

./: .clang-format  .gitignore  CMakeLists.txt
src/: data_types.hpp  defines.hpp  events.hpp  implementation.hpp  keysymdef.hpp  xinput.cpp  xinput.hpp  xinput_defines.hpp  xinput_events.hpp  xkb.cpp  xkb.hpp  xkb_defines.hpp  xkb_str.hpp  xlib++.cpp  xlib++.hpp  xutil.cpp  xutil.hpp
src/glad/: gl.cpp  gl.hpp  glx.cpp  glx.hpp
